--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:backend": "uv run pytest backend/tests/ -v",
+    "test:backend:watch": "uv run pytest backend/tests/ -v --looponfail",
+    "test:backend:coverage": "uv run pytest backend/tests/ --cov=backend --cov-report=html --cov-report=term",
+    "server:start": "uv run uvicorn backend.main:app --reload --host localhost --port 8119",
+    "server:start:prod": "uv run uvicorn backend.main:app --host localhost --port 8119",
+    "server:stop": "pkill -f 'uvicorn backend.main:app' || true"
   }
 }
