--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "sse-starlette>=2.2.0",
     "pytest>=8.3.0",
     "pytest-asyncio>=0.24.0",
+    "einops>=0.8.1",
 ]
 
 [tool.pytest.ini_options]
