--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pytest>=8.3.0",
     "pytest-asyncio>=0.24.0",
     "einops>=0.8.1",
+    "psutil>=7.1.3",
 ]
 
 [tool.pytest.ini_options]
