Phase 1.5 Implementation (unfinished)

--- a/.env.dist
+++ b/.env.dist
@@ -1,27 +1,65 @@
 # Zotero RAG Backend Configuration
 # Copy this file to .env and fill in your values
 
-# HuggingFace token for downloading models (required for some models like nomic-embed-text-v1.5)
-# Get your token at: https://huggingface.co/settings/tokens
-HF_TOKEN=your_huggingface_token_here
+# =============================================================================
+# API Configuration
+# =============================================================================
 
-# Model preset to use
-# Options: cpu-only, gpu-high-memory, mac-mini-m4-16gb, remote-api
-# Default: cpu-only (configure mac-mini-m4-16gb on Mac Mini M4)
+# API server host and port
+API_HOST=localhost
+API_PORT=8119
+
+# =============================================================================
+# Model Configuration
+# =============================================================================
+
+# Hardware preset to use
+# Options: cpu-only, mac-mini-m4-16gb, gpu-high-memory, remote-openai, remote-kisski
+# Default: cpu-only
 MODEL_PRESET=cpu-only
 
-# Optional: Custom paths for model weights and vector database
-# MODEL_WEIGHTS_PATH=/path/to/models
-# VECTOR_DB_PATH=/path/to/qdrant
+# Paths for model weights and vector database
+# Default: ~/.cache/zotero-rag/models and ~/.local/share/zotero-rag/qdrant
+MODEL_WEIGHTS_PATH=~/.cache/zotero-rag/models
+VECTOR_DB_PATH=~/.local/share/zotero-rag/qdrant
 
-# Optional: API keys for remote inference
-# OPENAI_API_KEY=your_openai_key
-# ANTHROPIC_API_KEY=your_anthropic_key
-# COHERE_API_KEY=your_cohere_key
+# =============================================================================
+# Zotero Configuration
+# =============================================================================
 
-# Optional: Zotero local API URL (default: http://localhost:23119)
-# ZOTERO_API_URL=http://localhost:23119
+# Zotero local API URL
+# Default: http://localhost:23119
+ZOTERO_API_URL=http://localhost:23119
 
-# Optional: Logging configuration
-# LOG_LEVEL=INFO
-# LOG_FILE=/path/to/app.log
+# =============================================================================
+# Logging Configuration
+# =============================================================================
+
+# Logging level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# Default: INFO
+LOG_LEVEL=INFO
+
+# Log file path
+# Default: ~/.local/share/zotero-rag/logs/app.log
+LOG_FILE=~/.local/share/zotero-rag/logs/app.log
+
+# =============================================================================
+# API Keys (for remote inference and model downloads)
+# =============================================================================
+
+# HuggingFace token for downloading models (required for some models like nomic-embed-text-v1.5)
+# Get your token at: https://huggingface.co/settings/tokens
+# HF_TOKEN=your_huggingface_token_here
+
+# OpenAI API key (for remote-openai preset or remote embeddings)
+# OPENAI_API_KEY=sk-...
+
+# Anthropic API key (for Claude models)
+# ANTHROPIC_API_KEY=sk-ant-...
+
+# Cohere API key (for Cohere embeddings/models)
+# COHERE_API_KEY=...
+
+# GWDG KISSKI Academic Cloud LLM service (for remote-kisski preset)
+# Get access at: https://kisski.gwdg.de/
+# KISSKI_API_KEY=your_kisski_api_key
