--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ dependencies = [
     "pytest-asyncio>=0.24.0",
     "einops>=0.8.1",
     "psutil>=7.1.3",
+    "openai>=2.7.1",
+    "anthropic>=0.72.0",
+    "bitsandbytes>=0.48.2",
+    "accelerate>=1.11.0",
 ]
 
 [tool.pytest.ini_options]
