Start implementing integration tests (phase 4)

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:backend": "uv run pytest backend/tests/ -v",
     "test:backend:watch": "uv run pytest backend/tests/ -v --looponfail",
     "test:backend:coverage": "uv run pytest backend/tests/ --cov=backend --cov-report=html --cov-report=term",
+    "test:integration": "uv run pytest -m integration -v -s",
+    "test:integration:quick": "uv run pytest backend/tests/test_real_integration.py::test_zotero_connectivity -v -s",
+    "test:all": "uv run pytest -m \"\" -v -s",
     "server:start": "uv run python scripts/server.py start",
     "server:start:prod": "uv run python scripts/server.py start --prod",
     "server:stop": "uv run python scripts/server.py stop",
