--- a/.env.test
+++ b/.env.test
@@ -66,12 +66,17 @@ RUN_SLOW_TESTS=0
 # Test timeout in seconds
 TEST_TIMEOUT=300
 
+# Backend server URL for API tests (uses separate test server on port 8219)
+BACKEND_BASE_URL=http://localhost:8219
+
 # =============================================================================
 # Logging for Tests
 # =============================================================================
 
 # Log level for integration tests (DEBUG for detailed output)
-LOG_LEVEL=INFO
+LOG_LEVEL=DEBUG
+
+# Note: Test server logs are written to logs/test_server.log (hardcoded in conftest.py)
 
 # =============================================================================
 # USAGE INSTRUCTIONS
@@ -85,5 +90,5 @@ LOG_LEVEL=INFO
 # Quick Start:
 #   1. Start Zotero with test group synced
 #   2. Set KISSKI_API_KEY in environment: export KISSKI_API_KEY=your_key
-#   3. Run tests: npm run test:integration
-#
+#   3. Run integration tests: npm run test:integration
+#   4. Run api tests: npm run test:api
