--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "start": "uv run python scripts/server.py start --prod",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:backend": "uv run pytest backend/tests/ -v",
     "test:backend:watch": "uv run pytest backend/tests/ -v --looponfail",
@@ -22,5 +23,8 @@
     "server:status": "uv run python scripts/server.py status",
     "plugin:build": "node scripts/build-plugin.js",
     "plugin:watch": "node scripts/build-plugin.js --watch"
+  },
+  "devDependencies": {
+    "archiver": "^7.0.1"
   }
 }
