--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "anthropic>=0.72.0",
     "bitsandbytes>=0.48.2",
     "accelerate>=1.11.0",
+    "markdown-it-py>=4.0.0",
 ]
 
 [tool.pytest.ini_options]
