--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
     name: Semantic Release
     runs-on: ubuntu-latest
     needs: test
+    if: success()
 
     steps:
       - name: Checkout code
