--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "psutil>=7.1.3",
     "openai>=2.7.1",
     "anthropic>=0.72.0",
-    "bitsandbytes>=0.48.2",
+    "bitsandbytes>=0.48.2; sys_platform != 'darwin'",
     "accelerate>=1.11.0",
     "markdown-it-py>=4.0.0",
 ]
