--- a/.env.dist
+++ b/.env.dist
@@ -6,8 +6,8 @@
 # =============================================================================
 
 # API server host and port
-API_HOST=localhost
-API_PORT=8119
+# API_HOST=localhost
+# API_PORT=8119
 
 # =============================================================================
 # Model Configuration
@@ -63,3 +63,19 @@ LOG_FILE=~/.local/share/zotero-rag/logs/server.log
 # GWDG KISSKI Academic Cloud LLM service (for remote-kisski preset)
 # Get access at: https://kisski.gwdg.de/
 # KISSKI_API_KEY=your_kisski_api_key
+
+# =============================================================================
+# Development Configuration (only useful for developing the Zotero plugin)
+# =============================================================================
+
+# Path to the Zotero binary file.
+# For macOS, the path is typically `*/Zotero.app/Contents/MacOS/zotero`.
+# ZOTERO_PLUGIN_ZOTERO_BIN_PATH=/path/to/zotero.exe
+
+# Path to the profile used for development.
+# To create a profile for development, start the profile manager with `/path/to/zotero.exe -p`.
+# More info: https://www.zotero.org/support/kb/profile_directory
+# ZOTERO_PLUGIN_PROFILE_PATH=/path/to/profile
+
+# Optional path to the data directory (if needed).
+# ZOTERO_PLUGIN_DATA_DIR=/path/to/data
