--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "author": "",
   "type": "commonjs",
   "main": "index.js",
+  "repository": { 
+    "type": "git",
+    "url": "git+https://github.com/cboulanger/zotero-rag.git"
+  },
   "devDependencies": {
     "@commitlint/cli": "^18.4.0",
     "@commitlint/config-conventional": "^18.4.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.3",
     "semantic-release": "^22.0.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/exec": "^6.0.3"
+    "zotero-plugin-scaffold": "^0.8.1"
   },
   "config": {
     "commitizen": {
@@ -38,7 +43,7 @@
     "server:restart": "uv run python scripts/server.py restart",
     "server:status": "uv run python scripts/server.py status",
     "plugin:build": "uv run python scripts/build_plugin.py",
-    "plugin:watch": "uv run python scripts/build_plugin.py --watch",
+    "plugin:dev": "node node_modules/.bin/zotero-plugin dev",
     "semantic-release": "semantic-release",
     "commit": "cz"
   }
