Bundel Zotero Plugin Toolkit

--- a/.env.dist
+++ b/.env.dist
@@ -29,7 +29,7 @@ VECTOR_DB_PATH=~/.local/share/zotero-rag/qdrant
 
 # Zotero local API URL
 # Default: http://localhost:23119
-ZOTERO_API_URL=http://localhost:23119
+# ZOTERO_API_URL=http://localhost:23119
 
 # =============================================================================
 # Logging Configuration
