--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "type": "commonjs",
   "main": "index.js",
-  "repository": { 
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/cboulanger/zotero-rag.git"
   },
@@ -18,6 +18,7 @@
     "@semantic-release/git": "^10.0.1",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "esbuild": "^0.27.0",
     "husky": "^8.0.3",
     "semantic-release": "^22.0.0",
     "zotero-plugin-scaffold": "^0.8.1"
@@ -43,8 +44,12 @@
     "server:restart": "uv run python scripts/server.py restart",
     "server:status": "uv run python scripts/server.py status",
     "plugin:build": "uv run python scripts/build_plugin.py",
-    "plugin:dev": "node node_modules/.bin/zotero-plugin dev",
+    "plugin:build:toolkit": "node scripts/build_toolkit.js",
+    "plugin:dev": "uv run python scripts/zotero_plugin.py dev",
     "semantic-release": "semantic-release",
     "commit": "cz"
+  },
+  "dependencies": {
+    "zotero-plugin-toolkit": "^5.1.0-beta.12"
   }
 }
