Add documentation for plugin hot reloading

--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "test:all": "uv run pytest -v -s",
     "server:start": "uv run python scripts/server.py start",
     "server:start:prod": "uv run python scripts/server.py start --prod",
+    "server:start:dev": "uv run python scripts/server.py start --dev",
     "server:stop": "uv run python scripts/server.py stop",
     "server:restart": "uv run python scripts/server.py restart",
+    "server:restart:dev": "uv run python scripts/server.py restart --dev",
     "server:status": "uv run python scripts/server.py status",
     "plugin:build": "uv run python scripts/build_plugin.py",
     "plugin:build:toolkit": "node scripts/build_toolkit.js",
