--- a/package.json
+++ b/package.json
@@ -39,15 +39,17 @@
     "test:api": "uv run pytest -m api -v -s",
     "test:all": "uv run pytest -v -s",
     "server:start": "uv run python scripts/server.py start",
-    "server:start:prod": "uv run python scripts/server.py start --prod",
-    "server:start:dev": "uv run python scripts/server.py start --dev",
     "server:stop": "uv run python scripts/server.py stop",
     "server:restart": "uv run python scripts/server.py restart",
-    "server:restart:dev": "uv run python scripts/server.py restart --dev",
     "server:status": "uv run python scripts/server.py status",
+    "dev:start": "uv run python scripts/server.py start --dev",
+    "dev:stop": "uv run python scripts/server.py stop",
+    "dev:restart": "uv run python scripts/server.py restart --dev",
+    "dev:status": "uv run python scripts/server.py status --dev",
+    "dev:plugin:start": "uv run python scripts/zotero_plugin.py start",
+    "dev:plugin:stop": "uv run python scripts/zotero_plugin.py stop",
     "plugin:build": "uv run python scripts/build_plugin.py",
     "plugin:build:toolkit": "node scripts/build_toolkit.js",
-    "plugin:dev": "uv run python scripts/zotero_plugin.py dev",
     "semantic-release": "semantic-release",
     "commit": "cz"
   },
