--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "start": "uv run python scripts/server.py start",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test:backend",
     "test:backend": "uv run pytest backend/tests/ -v",
     "test:backend:watch": "uv run pytest backend/tests/ -v --looponfail",
     "test:backend:coverage": "uv run pytest backend/tests/ --cov=backend --cov-report=html --cov-report=term",
